--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   postgres:
     image: postgres:14.5-alpine3.16
     ports:
-      - 5432:5432
+      - 5432:${DB_PORT}
     volumes:
       - ./data:/var/lib/postgresql/data
     environment:
