--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 8000:${PORT}
+      - ${PORT}:${PORT}
     volumes:
       - .:/app
     depends_on:
