--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==4.1.2
 djangorestframework==3.14.0
 django-cors-headers==3.13.0
 django-cloudinary-storage==0.3.0
+django-cleanup==6.0.0
 django-environ==0.9.0
 gunicorn==20.1.0
 Pillow ==9.2.0
